2005-07-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm (callback): mapping reset after
	host unreachable

	* configs/torrus-config.pl:
	$Torrus::Collector::SNMP::unreachableTimeout set to 6 hours

	* perllib/Torrus/Renderer/HTML.pm: entered Date/time verification
	New CPAN module required:
	perl -MCPAN -e 'install Date::Parse'

2005-07-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* templates/html-incblocks.txt: Added date setting dialog.
	TODO: date format validation.

2005-07-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	New discovery parameter: RFC2863_IF_MIB::only-interfaces

	* configure.ac: Now checking if user torrus exists

	* perllib/Torrus/DevDiscover/AxxessIT.pm: support for WANX/LANX modules

2005-07-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/rrddir2xml.in: New utility for generating XML from a directory
	with RRD files

2005-06-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm: [1.0.1pl2] - fixed bug
	with deleting unreachable targets

2005-06-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: 1.0.1 Patchlevel 1

	* bin/action_snmpv1trap.in, bin/action_snmptrap.in:
	added torrusMonitorDesc 

	* sup/mibs/TORRUS-MIB.txt: new OID: torrusMonitorDesc

	* NEWS: release 1.0.1

	* perllib/Torrus/SiteConfig.pm (verify):
	$Torrus::Renderer::stylingProfileOverlay is now an absolute file name

	* xmlconfig/vendor/cisco.ios.docsis.xml:
	Added Registered modems graph. WARNING: RRD structure changed

	* bin/devdiscover.in: New option: --fallback

	* perllib/Torrus/Collector/SNMP.pm (initTargetAttributes):
	Target is deleted when SNMP map expansion fails

2005-06-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Monitor.pm: sleep --delay minutes also after
	recompiling

	* configs/torrus-config.pl: