@@ -1,5 +1,8 @@
 2005-07-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* bin/devdiscover.in: Preventing the bundle file update when
+	--limit is specified.
+
 	* perllib/Torrus/Collector/SNMP.pm (callback): mapping reset after
 	host unreachable
 
